--- a/css/style.css
+++ b/css/style.css
@@ -252,15 +252,15 @@ img {
 }
 .section--with_bt{
 	border-top:1px solid #e8e7ef;
-	padding-top:80px;
+	padding-top: 49px;
 }
 .section-2 {
 	padding-bottom: 100px;
 	padding-top: 55px;
 }
 .section-3 {
-	padding-bottom: 100px;
-	padding-top: 71px;
+	padding-bottom: 25px;
+	padding-top: 53px;
 }
 .project_house__title {
 	margin-bottom: 0px;
@@ -371,7 +371,7 @@ img {
 }
 
 .norm_text-txt {
-	font-size: 18px;
+	font-size: 17px;
 	text-transform: uppercase;
 	display: inline-block;
 	line-height: 23px;
@@ -426,7 +426,7 @@ img {
 	width: 57%;
 }
 .section-5{
-	padding-bottom:70px;
+	padding-bottom: 29px;
 }
 .blue_section{
 	background-color:#211061;
@@ -492,7 +492,7 @@ textarea.form-control {
 }
 .section-8{
 	padding-top:50px;
-	padding-bottom: 90px;
+	padding-bottom: 74px;
 }
 .image_hovef{
 	margin-bottom: 9.2px;
@@ -509,7 +509,7 @@ textarea.form-control {
 	transition: all 0.7s linear;
 }
 .section-9{
-	padding-top:78px;
+	padding-top: 59px;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-image: url(../images/section-18-bg.jpg);
@@ -557,8 +557,8 @@ textarea.form-control {
 	box-shadow: -1px 2px 10px -3px black;
 }
 .section-10{
-	padding-top:80px;
-	padding-bottom:80px;
+	padding-top: 67px;
+	padding-bottom: 57px;
 }
 .title_big_orange span {
 	font-weight: 100;
@@ -568,4 +568,102 @@ textarea.form-control {
 }
 .section-11{
 	padding-bottom:80px;
+}
+.player2-container .mejs__time-buffering, .player2-container .mejs__time-current, .player2-container .mejs__time-handle,
+.player2-container .mejs__time-loaded, .player2-container .mejs__time-marker, .player2-container .mejs__time-total {
+	height: 5px;
+	border-radius: 0px;
+}
+
+.player2-container .mejs__time-total {
+	margin-top: 9px;
+}
+.player2-container .mejs__time-handle {
+	left: -10px;
+	width: 12px;
+	height: 12px;
+	border-radius: 50%;
+	background: transparent;
+	top: -5px;
+	cursor: pointer;
+	display: block;
+	position: absolute;
+	z-index: 1;
+	border: none;
+}
+.mejs__button {
+	border-right: 1px solid #c5c1cf;
+	width: 31px;
+}
+.mejs__volume-button button {
+	height: 20px;
+	width: 20px;
+	transform: scale(0.8);
+	top: 1px;
+}
+
+.mejs__button.mejs__volume-button {
+	border-right: 0px;
+	border-left: 1px solid #c5c1cf;
+}
+.mejs__button button {left: 6px;top: 2px;}
+.before_aud_text {
+	font-size: 18px;
+	text-transform: uppercase;
+	font-weight: 700;
+	text-align: center;
+	color: #211061;
+	padding-bottom: 3px;
+	position: relative;
+	margin-bottom: 19px;
+}
+
+.before_aud_text:before {
+	background-color: orange;
+	content: '';
+	width: 60px;
+	height: 1px;
+	position: absolute;
+	bottom: 0px;
+	left: 50%;
+	margin-left: -30px;
+}
+.modal_form {
+	padding: 35px 30px;
+	border-radius: 0px;
+	padding-top: 20px;
+}
+
+.title_form {
+	text-transform: uppercase;
+	color: #ff8e00;
+	font-size: 31px;
+	position: relative;
+	padding-bottom: 15px;
+	margin-bottom: 20px;
+	line-height: 32px;
+}
+
+.title_form:after {}
+
+.title_form:after {
+	content: '';
+	position: absolute;
+	left: 0px;
+	width: 45px;
+	height: 2px;
+	bottom: 0px;
+	display: block;
+	background-color: #ff8e00;
+}
+
+.modal-dialog {
+	border-radius: 0px;
+}
+
+.modal-content {
+	border-radius: 0px;
+}
+.modal-min-dialog{
+	max-width:359px;
 }
